--- a/services/requirements.txt
+++ b/services/requirements.txt
@@ -13,14 +13,18 @@ h11==0.14.0
 httpcore==1.0.2
 httpx==0.25.2
 idna==3.6
+iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 openai==1.3.5
 packaging==23.2
 Pillow==10.1.0
+pluggy==1.3.0
+py==1.11.0
 pydantic==2.5.2
 pydantic_core==2.14.5
+pytest==2.9.1
 requests==2.31.0
 sniffio==1.3.0
 tqdm==4.66.1
