--- a/services/requirements.txt
+++ b/services/requirements.txt
@@ -6,6 +6,7 @@ charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 distro==1.8.0
+flake8==7.0.0
 Flask==3.0.0
 Flask-Cors==4.0.0
 gunicorn==21.2.0
@@ -17,14 +18,15 @@ iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+mccabe==0.7.0
 openai==1.3.5
 packaging==23.2
 Pillow==10.1.0
 pluggy==1.3.0
 py==1.11.0
+pycodestyle==2.11.1
 pydantic==2.5.2
 pydantic_core==2.14.5
-pytest==2.9.1
 requests==2.31.0
 sniffio==1.3.0
 tqdm==4.66.1
