--- a/.github/workflows/portfolio-build.yml
+++ b/.github/workflows/portfolio-build.yml
@@ -29,6 +29,6 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Test with pytest
-      run: |
+    - name: Test 
+        cd services
         pytest
